--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,16 +1,17 @@
 body{
-    background-image: url(../images/another\ image.jpg);
+    background-image: url("../images/another-image.jpg");
+    background-size: 150%;
+    background-position: bottom;
     color:black;
     text-align: center;
     font-size: 100%;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 7px;
-    
+    font-family: Arial, Helvetica, sans-serif;    
 }
+
 .heading{
     display: block;
     border: 2px solid black;
-    height: 20vh;
+    height: 100px;
     background-size: cover;
 }
 
@@ -32,6 +33,6 @@ nav{
 }
 
 #pp{
-    width: 40vw;
+    width: 300px;
     margin: 0 auto;
 }
