--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -8,7 +8,13 @@ body{
     font-family: Arial, Helvetica, sans-serif;    
 }
 
-.heading{
+.dot{
+    height: 25px;
+    width: 25px;
+    background-color:lightpink;
+    border-radius: 50%;
+    display: inline-block;
+}
   
 
 
