--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -9,34 +9,25 @@ body{
 }
 
 .dot{
-    height: 25px;
-    width: 25px;
+    height: 15px;
+    width: 15px;
     background-color:lightpink;
     border-radius: 50%;
     display: inline-block;
 }
   
 
-
-
-nav{
-    font-style: italic;
-    display: inline-block;
-    box-sizing: border-box;
-    background-color:white;
-    width: 200px;
-    padding: 7px;
-    border: 1px solid black;
-    border-radius: 5px;
-}
-
 .about{
-    text-align: left;
-    margin-left: 10vw;
-    margin-right: 10vw;
+    width: 100%;
+    background:lightpink;
+    transition: width 2s;
+    text-align:center;
+    padding:15px;
+    margin:10px
 }
 
 #pp{
     width: 300px;
     margin: 0 auto;
+    border-radius: 50%;
 }
