--- a/assets/css/climatechange.css
+++ b/assets/css/climatechange.css
@@ -1,4 +1,30 @@
-wrapper{
-    background-color: yellow;
+body{
+    background-color:black;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 100%;
+    box-sizing: border-box;
+    margin: 0 auto;
+
+}
+.wrapper{
+    display: block;
+    width: 100vw;
+    border: 1px solid red;
+    padding: 1%; 
+    margin-bottom: 1%;
+    column-count: 3;
+}
+
+.container{
+    display: block;
+    height: 300px;
+    border: 1px solid black;
+    background-color: rgba(128, 128, 128, 0.658);
+    border-radius: 10px;
+    padding: 1%;
+    overflow: hidden;
+}
+
+img{
+    width: 70%;
 }
