--- a/assets/css/climatechange.css
+++ b/assets/css/climatechange.css
@@ -29,5 +29,5 @@ img{
     width: 70%;
 }
 .images{
-    background-image: url(../images/backgroundimage.jpg);
+    background-image: url(../images/);
 }
