--- a/assets/css/climatechange.css
+++ b/assets/css/climatechange.css
@@ -17,7 +17,7 @@ body{
 
 .container{
     display: block;
-    height: 300px;
+    height: 400px;
     border: 1px solid black;
     background-color: rgba(128, 128, 128, 0.658);
     border-radius: 10px;
@@ -29,5 +29,7 @@ img{
     width: 70%;
 }
 .images{
-    background-image: url(../images/);
+    background-image: url(../images/smoke.jpg);
+    background-repeat: no-repeat;
+
 }
