--- a/assets/css/climatechange.css
+++ b/assets/css/climatechange.css
@@ -4,6 +4,7 @@ body{
     font-size: 100%;
     box-sizing: border-box;
     margin: 0 auto;
+    color: white;
 
 }
 .wrapper{
@@ -23,14 +24,19 @@ body{
     border-radius: 10px;
     padding: 1%;
     overflow: hidden;
+    text-align: center;
+    line-height: 30px;
+   
+
 }
 
 img{
     width: 70%;
 }
 .images{
-    background-image: url(../images/earth.jpg);
-    background-repeat: repeat;
+    background-image: url(../images/earth2.jpg);
+    background-position: 200%;
+    background-size: contain;
  
  
 
