--- a/assets/css/climatechange.css
+++ b/assets/css/climatechange.css
@@ -26,7 +26,7 @@ body{
     overflow: hidden;
     text-align: center;
     line-height: 30px;
-   
+    
 
 }
 
@@ -36,7 +36,8 @@ img{
 .images{
     background-image: url(../images/earth2.jpg);
     background-position: 200%;
-    background-size: contain;
+    background-size: 500%;
+    background-repeat: no-repeat;
  
  
 
