--- a/assets/css/climatechange.css
+++ b/assets/css/climatechange.css
@@ -34,10 +34,8 @@ img{
     width: 70%;
 }
 .images{
-    background-image: url(../images/earth2.jpg);
-    background-position: 200%;
-    background-size: 500%;
-    background-repeat: no-repeat;
+    background-image: url(../images/grey.jpg);
+
  
  
 
