--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -82,3 +82,10 @@ body {
       left: 0;
       transition:all 0.6s
     }
+
+    .blog-card:hover h3:after{
+ 
+      animation: changeLetter 0.3s 1 linear;
+      width:80%
+    }
+    
