--- a/assets/css/simple.css
+++ b/assets/css/simple.css
@@ -88,4 +88,20 @@ body {
       animation: changeLetter 0.3s 1 linear;
       width:80%
     }
+    .blog-card h3,h1 {
+      font-size: 1.9em;
+      font-weight: 400;
+      letter-spacing: 1px;
+      font-family: 'Abril Fatface', serif;
+      margin-bottom: 0;
+      display:inline-block;
+    }
     
+    .blog-card h3 a{  
+      text-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);  
+      transition:all 0.2s
+    }
+
+    .blog-card h3 a:hover{
+      text-shadow: 0px 8px 20px rgba(0, 0, 0, 0.95);
+    }
